--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,13 @@
       "@@/*": ["./*"]
     }
   },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+  "exclude": [
+    "node_modules/",
+    ".nuxt",
+    "dist"
+  ],
+  "include": [
+    "node_modules",
+    "./utils/"
+  ]
 }
